# Nexus

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.tmp.driveupload/: 14833  14837  14841  14845  14849  14853  14857  14861  14865  14869  14875  14879  14883  14887  14891  14897  14901
Plan/: DEMO_SEED_RICH_SPEC.md  NEXUS — Graph Data Model Spec.md  NEXUS — Graph Interaction Engine Spec.md  NEXUS — Graph Rendering Architecture Spec.md  NEXUS — Graph UI Projection Spec.md  NEXUS — Institutional Interaction Model Spec.md  NEXUS — Interaction Mechanics Spec.md  NEXUS — Perfect Cockpit Layout Spec.md  NEXUS_ACTIVITY_BOOTSTRAP_NOTE.md  NEXUS_ACTIVITY_STATUS_TRANSITIONS_NOTE.md  NEXUS_ARCHITECTURE_REFERENCES.md  NEXUS_CYCLE_BOOTSTRAP_NOTE.md  NEXUS_DOCUMENT_INTEGRITY_STATES_NOTE.md  NEXUS_DOCUMENT_RECONCILIATION_NOTE.md  NEXUS_DOCUMENT_STATUS_TRANSITIONS_NOTE.md  NEXUS_IMPLEMENTATION_SEQUENCE.md  NEXUS_MVP_API_SPEC.md  NEXUS_MVP_CLI_SPEC.md  NEXUS_MVP_SCHEMA.sql  NEXUS_MVP_SPEC.md  NEXUS_SCHEMA_BOOTSTRAP_NOTE.md  UI_NORTH_STAR.md  UI_VISUAL_DIRECTION.md
nexus/: __init__.py  __main__.py  activities.py  api.py  audit.py  cli.py  cockpit.py  cycles.py  demo_seed.py  demo_seed_rich.py  documents.py  entities.py  relations.py  workspace.py  workspace_contract.py
reports/: 2026-03-14_relato-sessao-mvp-quickstart.md  BUILD_PROCESS_REPORT.md  CORE_EXPANSIBILITY_PASS_PHASE1.md  CORE_EXPANSIBILITY_PASS_PHASE2.md  Guia de teste humano do Nexus.md  REQUIREMENTS_UI_AND_EXPANSIBILITY_ASSESSMENT.md  TESTING_GUIDE.md
tests/: test_api_smoke.py  test_init_smoke.py  (+1 more)
(+29 files in other folders)
