[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-mvp"
version = "0.1.0"
description = "Local-first Nexus MVP bootstrap and CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4,<2",
  "typer>=0.24,<1",
]

[project.scripts]
nexus = "nexus.cli:main"

[tool.setuptools.packages.find]
include = ["nexus*"]
